UI-3228 [Social] Alignment bugs on Profile and Connection

--- a/webapp/portlet/src/main/webapp/skin/less/uiAllPeoplePortlet/Style.less
+++ b/webapp/portlet/src/main/webapp/skin/less/uiAllPeoplePortlet/Style.less
@@ -60,6 +60,11 @@
 		background-position: top right;
 		background-repeat: no-repeat;
 	}
+	.uiGrayLightBox label {
+		line-height: 18px;
+		margin: 0;
+		vertical-align: middle;
+	}
 }
 		
 .uiAllPeople #LoadMoreButton {
